--- a/WarmBoysApp/pubspec.yaml
+++ b/WarmBoysApp/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   sqflite: ^2.0.0+4
   path: ^1.8.0
-  provider: ^6.0.0
+  shared_preferences: ^2.0.13
 
 
   # The following adds the Cupertino Icons font to your application.
