--- a/chat2/app/src/main/AndroidManifest.xml
+++ b/chat2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Chat2"
         tools:targetApi="31">
         <activity
+            android:name=".ResultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SurveyActivity"
+            android:exported="false" />
+        <activity
             android:name=".CheckActivity"
             android:exported="false" />
         <activity
