--- a/WarmBoysApp/pubspec.yaml
+++ b/WarmBoysApp/pubspec.yaml
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.0.0+4
   path: ^1.8.0
   shared_preferences: ^2.0.13
 
@@ -38,6 +37,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
+  cloud_firestore: ^5.1.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +66,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/background.jpg
+    - assets/logos/apptitle.png
+    - assets/logos/company.png
     - assets/icons/profile_blank.png
     - assets/icons/home.png
     - assets/icons/matching.png
