--- a/WarmBoysApp/pubspec.yaml
+++ b/WarmBoysApp/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   path: ^1.8.0
   shared_preferences: ^2.0.13
-
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,7 +42,8 @@ dependencies:
   cloud_firestore: ^5.1.0
   provider: ^6.0.0
   youtube_player_flutter: ^8.0.0
-
+  firebase_messaging: ^15.0.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
