--- a/WarmBoysApp/pubspec.yaml
+++ b/WarmBoysApp/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.0.0
   youtube_player_flutter: ^8.0.0
   firebase_messaging: ^15.0.3
+  table_calendar: ^3.1.2
   
 dev_dependencies:
   flutter_test:
