--- a/WarmBoysApp/android/app/build.gradle
+++ b/WarmBoysApp/android/app/build.gradle
@@ -41,8 +41,8 @@ android {
         applicationId = "com.example.warm_boys"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdk = 26
+        targetSdk = 33
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
     }
