--- a/WarmBoysApp/ios/Runner/Info.plist
+++ b/WarmBoysApp/ios/Runner/Info.plist
@@ -26,6 +26,10 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>reason</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>reason</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
