--- a/WarmBoysApp/pubspec.yaml
+++ b/WarmBoysApp/pubspec.yaml
@@ -39,11 +39,17 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.2
+  firebase_storage: ^12.1.2
   cloud_firestore: ^5.1.0
   provider: ^6.0.0
   youtube_player_flutter: ^8.0.0
   firebase_messaging: ^15.0.3
   table_calendar: ^3.1.2
+  image_picker: ^1.0.4
+  image: ^4.1.3
+  google_mlkit_face_detection: ^0.11.0
+  google_mlkit_commons: ^0.7.1
+  tflite_flutter: ^0.10.4
   
 dev_dependencies:
   flutter_test:
@@ -77,6 +83,7 @@ flutter:
     - assets/icons/matching.png
     - assets/icons/exchange.png
     - assets/icons/chat.png
+    - assets/models/facenet.tflite
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
