add community write
add community write function of firebase db, fix password keyboard

--- a/chat2/app/src/main/AndroidManifest.xml
+++ b/chat2/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
             android:name=".SurveyActivity"
             android:exported="false" />
         <activity
+            android:name=".CommunityActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CommunityWriteActivity"
+            android:exported="false" />
+        <activity
             android:name=".CheckActivity"
             android:exported="false" />
         <activity
