--- a/WarmBoysApp/pubspec.yaml
+++ b/WarmBoysApp/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   google_mlkit_face_detection: ^0.11.0
   google_mlkit_commons: ^0.7.1
   tflite_flutter: ^0.10.4
-  camera: ^0.11.0+2
+  flutter_email_sender: ^6.0.3
   
 dev_dependencies:
   flutter_test:
