--- a/WarmBoysApp/pubspec.yaml
+++ b/WarmBoysApp/pubspec.yaml
@@ -104,6 +104,47 @@ flutter:
           weight: 700
         - asset: assets/fonts/Roboto-Regular.ttf
           weight: 400
+    - family: NotoSansKR
+      fonts:
+        - asset: assets/fonts/NotoSansKR-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/NotoSansKR-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/NotoSansKR-Light.ttf
+          weight: 300
+        - asset: assets/fonts/NotoSansKR-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/NotoSansKR-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/NotoSansKR-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/NotoSansKR-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/NotoSansKR-ExtraBold.ttf
+          weight: 800
+    - family: Tenada
+      fonts:
+        - asset: assets/fonts/Tenada.ttf
+    - family: SCDream
+      fonts:
+        - asset: assets/fonts/SCDream1.otf
+          weight: 100
+        - asset: assets/fonts/SCDream1.otf
+          weight: 200
+        - asset: assets/fonts/SCDream1.otf
+          weight: 300
+        - asset: assets/fonts/SCDream1.otf
+          weight: 400
+        - asset: assets/fonts/SCDream1.otf
+          weight: 500
+        - asset: assets/fonts/SCDream1.otf
+          weight: 600
+        - asset: assets/fonts/SCDream1.otf
+          weight: 700
+        - asset: assets/fonts/SCDream1.otf
+          weight: 800
+        - asset: assets/fonts/SCDream1.otf
+          weight: 900
     # - family: Trajan Pro
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
