--- a/chat2/app/src/main/AndroidManifest.xml
+++ b/chat2/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
             android:name=".AvatarActivity"
             android:exported="false" />
         <activity
+            android:name=".DiaryActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
