url launcher 추가

--- a/WarmBoysApp/pubspec.yaml
+++ b/WarmBoysApp/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   google_mlkit_commons: ^0.7.1
   tflite_flutter: ^0.10.4
   flutter_email_sender: ^6.0.3
+  url_launcher: ^6.3.0
+
   
 dev_dependencies:
   flutter_test:
