pubspec.yaml, syncfusion_flutter_xlsio, share_plus 플러그인 추가

--- a/WarmBoysApp/pubspec.yaml
+++ b/WarmBoysApp/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   tflite_flutter: ^0.10.4
   flutter_email_sender: ^6.0.3
   url_launcher: ^6.3.0
+  syncfusion_flutter_xlsio: ^26.2.11
+  share_plus: ^10.0.0
+
 
   
 dev_dependencies:
