앱 대표 아이콘, 이름 변경

--- a/WarmBoysApp/ios/Runner/Info.plist
+++ b/WarmBoysApp/ios/Runner/Info.plist
@@ -12,7 +12,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Warm Boys</string>
+	<string>따시게</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
